--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
