intial map screen

--- a/app.json
+++ b/app.json
@@ -15,16 +15,27 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "googleMapsApiKey": "AIzaSyDYzQQeYaNrUsRv5SMy5lQLFdjIesncP1Y"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "config": {
+        "googleMapsApiKey": "AIzaSyDYzQQeYaNrUsRv5SMy5lQLFdjIesncP1Y"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "config": {
+        "googleMapsApiKey": "AIzaSyDYzQQeYaNrUsRv5SMy5lQLFdjIesncP1Y"
+      }
     }
   }
 }
+
+
