--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "github:react-native-picker/picker",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
@@ -25,11 +27,13 @@
     "react-native-ionicons": "^4.6.5",
     "react-native-maps": "^1.8.3",
     "react-native-paper": "^5.11.3",
+    "react-native-picker": "^4.3.7",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-navigation-stack": "^2.10.4",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "expo-secure-store": "~12.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
