--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
     "expo-location": "~16.1.0",
+    "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.0",
     "react": "18.2.0",
@@ -32,8 +33,7 @@
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "~3.22.0",
     "react-navigation-stack": "^2.10.4",
-    "react-router-dom": "^6.20.1",
-    "expo-secure-store": "~12.3.1"
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
